--- a/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20F71</string>
+	<string>21C52</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.4</string>
+	<string>1.5.9</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,29 +25,33 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.5.4</string>
+	<string>1.5.9</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12E262</string>
+	<string>13C100</string>
 	<key>DTPlatformName</key>
 	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>11.3</string>
+	<string>12.1</string>
 	<key>DTSDKBuild</key>
-	<string>20E214</string>
+	<string>21C46</string>
 	<key>DTSDKName</key>
-	<string>macosx11.3</string>
+	<string>macosx12.1</string>
 	<key>DTXcode</key>
-	<string>1250</string>
+	<string>1321</string>
 	<key>DTXcodeBuild</key>
-	<string>12E262</string>
+	<string>13C100</string>
+	<key>GIT COMMIT HASH</key>
+	<string>969e555</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>as.vit9696.Lilu</string>
+			<key>GITCOMMITHASH</key>
+			<string>969e555</string>
 			<key>IOClass</key>
 			<string>Lilu</string>
 			<key>IOMatchCategory</key>
@@ -55,7 +59,7 @@
 			<key>IOProviderClass</key>
 			<string>IOResources</string>
 			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>IOBSD</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
@@ -65,6 +69,21 @@
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.2.0</string>
 	<key>OSBundleLibraries</key>
+	<dict>
+		<key>com.apple.kernel.6.0</key>
+		<string>7.9.9</string>
+		<key>com.apple.kpi.bsd</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.iokit</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.libkern</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.mach</key>
+		<string>8.0.0</string>
+		<key>com.apple.kpi.unsupported</key>
+		<string>8.0.0</string>
+	</dict>
+	<key>OSBundleLibraries_x86_64</key>
 	<dict>
 		<key>com.apple.kpi.bsd</key>
 		<string>10.0.0</string>
