--- a/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/Lilu.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>21C52</string>
+	<string>21D49</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.5.9</string>
+	<string>1.6.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,7 +25,7 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.5.9</string>
+	<string>1.6.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
@@ -43,7 +43,7 @@
 	<key>DTXcodeBuild</key>
 	<string>13C100</string>
 	<key>GIT COMMIT HASH</key>
-	<string>969e555</string>
+	<string>ec63d06</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>as.vit9696.Lilu</key>
@@ -51,7 +51,7 @@
 			<key>CFBundleIdentifier</key>
 			<string>as.vit9696.Lilu</string>
 			<key>GITCOMMITHASH</key>
-			<string>969e555</string>
+			<string>ec63d06</string>
 			<key>IOClass</key>
 			<string>Lilu</string>
 			<key>IOMatchCategory</key>
